--- a/src/scss/layouts/_layouts.page.scss
+++ b/src/scss/layouts/_layouts.page.scss
@@ -691,7 +691,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 56.25vw;
+    height: 100%;
       opacity: 0.4;
 
       @include mq($from: tablet) {
@@ -705,8 +705,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 56.25vw;
+    height: 100%;
     opacity: 0.4;
+
 
     @include mq($from: tablet) {
       height: 100%;
